# unit-jit

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
benchmarks/: bench_bcrnnoise.py  gillespie.py  rna.py  rna_numba.py
examples/: example.py  example_advanced.py  example_advanced_baseline.py  example_fast_zone.py  example_input_args.py
src/unit_jit/: __init__.py  _inferrer.py
tests/: test_abstract_override.py  test_augassign.py  test_core.py  test_debug.py  test_examples.py  test_fractional_power.py  test_jit_active.py  test_list_mutation.py  test_list_reduce.py  test_list_repetition.py  test_listcomp.py  test_namedtuple_return.py  test_numba.py  test_numpy.py  test_partial_callee.py  test_pintrs.py  test_plain_method_inference.py  test_return_units.py  test_rng_cross_call.py  test_rng_inference.py  test_scripts.py  test_unit_fast.py  test_unit_fast_numpy.py  test_with.py
