[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unit-jit"
version = "0.4.10"
description = "JIT unit-stripping decorator: write Pint-annotated code, run at float speed"
authors = [{ name = "Matthias Függer" }]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "pint>=0.24",
    "libcst>=1.4",
]

[project.optional-dependencies]
numba = ["numba>=0.64.0"]
dev = [
    "pytest>=8.0",
    "numpy>=1.26",
    "ruff>=0.6",
    "pintrs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/unit_jit"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
exclude = ["tests", "examples", "benchmarks", ".venv"]
